# Rich_AIM_Acct_INV

./: .env.example  .gitignore  README.md
RichdaleAccounting/: .gitignore  Cargo.toml  Dockerfile  PROJECT_SUMMARY.md  QUICK_START.md  README.md  build.sh  docker-compose.yml  run.sh
RichdaleAccounting/Phases/: 00-strategy.md  01-phase-0-compile-fix.md  02-phase-1-database-wire.md  03-phase-2-agent-engine.md  04-phase-3-end-to-end.md  05-phase-4-auth-accounting.md  06-phase-5-ai-pipeline.md  07-phase-6-edge-sync.md  08-phase-7-production.md  09-commit-discipline.md  README.md  TRACKER.md  phase-0-completion.md  phase-1-completion.md  phase-2-completion.md  phase-3-completion.md  phase-3-handoff.md  phase-4-handoff.md  phase-6-handoff.md  phase-7-handoff.md
RichdaleAccounting/config/: server.toml
RichdaleAccounting/data/: .gitkeep
RichdaleAccounting/docker/: .gitkeep
RichdaleAccounting/docs/: 01-overview.md  02-architecture.md  03-agents.md  04-accounting.md  05-agentic-design.md  05-database.md  06-ai.md  07-api-edge-monitor.md  08-frontend.md  09-critical-analysis.md  10-execution-plan.md  README.md
RichdaleAccounting/docs/user/: faq.md  installation.md  quick-start.md  reports-guide.md  troubleshooting.md
RichdaleAccounting/nexus-core/: Cargo.toml
RichdaleAccounting/nexus-core/benches/: lock_contention_report.md  performance.rs
RichdaleAccounting/nexus-core/src/: lib.rs  main.rs
RichdaleAccounting/nexus-core/src/accounting/: ap.rs  assets.rs  budget.rs  cashflow.rs  invoice.rs  ledger.rs  mod.rs  payroll.rs  receipt.rs  reconciliation.rs  reporting.rs  tax.rs
RichdaleAccounting/nexus-core/src/agents/: agent_types.rs  config.rs  document.rs  error.rs  memory.rs  mod.rs  orchestrator.rs  status.rs  task.rs
RichdaleAccounting/nexus-core/src/ai/: analysis.rs  classification.rs  embeddings.rs  mod.rs  ocr.rs  pdf.rs
RichdaleAccounting/nexus-core/src/api/: auth.rs  middleware.rs  mod.rs
RichdaleAccounting/nexus-core/src/api/routes/: health.rs
RichdaleAccounting/nexus-core/src/audit/: mod.rs
RichdaleAccounting/nexus-core/src/database/: INJECTION_AUDIT.md  audit.rs  document.rs  error.rs  financial.rs  migrations.rs  mod.rs  models.rs  schema.rs  seed.rs  user.rs
RichdaleAccounting/nexus-core/src/edge/: compression.rs  conflict.rs  encryption.rs  local_db.rs  mod.rs  store.rs  sync.rs  tracking.rs
RichdaleAccounting/nexus-core/src/models/: mod.rs
RichdaleAccounting/nexus-core/src/monitor/: mod.rs
RichdaleAccounting/nexus-core/src/utils/: date_utils.rs  export.rs  file_utils.rs  import.rs  mod.rs  validation.rs
RichdaleAccounting/nexus-core/tests/: agent_comprehensive_test.rs  agent_integration_test.rs  e2e_test.rs  edge_integration_test.rs  integration_test.rs
RichdaleAccounting/nexus-core/tests/load/: RESULTS.md  generate_token.sh  load_concurrent_rw.sh  load_get.sh  load_post.sh  load_ws.sh  post_script.lua
RichdaleAccounting/scripts/: .gitkeep  README.md  audit.ps1  audit.sh
RichdaleAccounting/tests/load/: README.md  RESULTS.md  hey_bench.sh  load_test.rs  wrk_bench.sh
docs/api/: reference.md
docs/developer/: setup.md
docs/user/: install.md  quick-start.md
nexus-ledger-tauri/: Cargo.toml  README.md  index.html  package-lock.json  package.json  vite.config.ts
nexus-ledger-tauri/backend/: Cargo.toml
nexus-ledger-tauri/backend/src/: main.rs
nexus-ledger-tauri/src/: App.tsx  index.css
nexus-ledger-tauri/src-tauri/: BUILD.md  Cargo.toml  UPDATER_CONFIG.md  tauri.conf.json
nexus-ledger-tauri/src-tauri/icons/: README.md  generate-icons.ps1
nexus-ledger-tauri/src-tauri/src/: lib.rs  main.rs
nexus-ledger-tauri/src/components/: ChatSidebar.tsx  ConflictResolver.tsx  ErrorBoundary.tsx  Layout.tsx  ProtectedRoute.tsx  SyncStatus.tsx
nexus-ledger-tauri/src/contexts/: AuthContext.tsx
nexus-ledger-tauri/src/lib/: api.ts
nexus-ledger-tauri/src/pages/: AccountsPage.tsx  DashboardPage.tsx  DocumentsPage.tsx  InvoicesPage.tsx  JournalEntryPage.tsx  LoginPage.tsx  RegisterPage.tsx  TransactionsPage.tsx
scripts/: audit.ps1  audit.sh
