[workspace]
members = ["nexus-core"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1.36"
rust_decimal_macros = "1.36"
once_cell = "1.19"
tempfile = "3.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notify = "6.0"
reqwest = { version = "0.11", features = ["json"] }
surrealdb = { version = "1.0", features = ["kv-mem", "protocol-ws", "native-tls"] }
ollama-rs = "0.1"
sha2 = "0.10"
hex = "0.4"
dashmap = "5.0"
clap = { version = "4.0", features = ["derive"] }
config = "0.13"
async-trait = "0.1"
path-absolutize = "3.0"
base64 = "0.21"
regex = "1.0"
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
tower = "0.4"
tokio-stream = "0.1"
futures = "0.3"
argon2 = "0.5"
jsonwebtoken = "9"
governor = "0.6"
prometheus = "0.13"
criterion = { version = "0.5", features = ["async_tokio"] }
rusqlite = { version = "0.31", features = ["bundled"] }
aes-gcm = "0.10"
hkdf = "0.12"
lz4 = "1.24"
rand = "0.8"
pdf-extract = "0.8"
llama_cpp_rs = "0.3"
zeroize = { version = "1.7", features = ["derive"] }
crc32fast = "1.3"
