[package]
name = "nexus-core"
version = "0.1.0"
edition = "2021"
authors = ["Mounir Siraji <mounir@richdaleai.com>"]
license = "Apache-2.0"
description = "Fully agentic accounting platform - QuickBooks replacement"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rust-decimal = { workspace = true }
rust-decimal-macros = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
notify = { workspace = true }
reqwest = { workspace = true }
surrealdb = { workspace = true }
ollama-rs = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
dashmap = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
async-trait = { workspace = true }
path-absolutize = { workspace = true }
base64 = { workspace = true }
