[package]
name = "nexus-core"
version = "0.1.0"
edition = "2021"
authors = ["Mounir Siraji <mounir@richdaleai.com>"]
license = "Apache-2.0"
description = "Fully agentic accounting platform - QuickBooks replacement"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
notify = { workspace = true }
reqwest = { workspace = true }
surrealdb = { workspace = true }
ollama-rs = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
dashmap = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
async-trait = { workspace = true }
path-absolutize = { workspace = true }
base64 = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
